[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snake"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }